istio/istio-raw/authorizationPolicy/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: default
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      serviceAccountName: sa-service-a
      automountServiceAccountToken: false
      containers:
      - name: service-a
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: default
  labels:
    app: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      serviceAccountName: sa-service-b
      automountServiceAccountToken: false
      containers:
      - name: service-b
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
  namespace: default
  labels:
    app: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      serviceAccountName: sa-service-c
      automountServiceAccountToken: false
      containers:
      - name: service-c
        image: poxstone/flask_any_response
        ports:
        - containerPort: 8080
